fix: login bottom on mobile

--- a/client/src/components/organisms/ourProduct/style.scss
+++ b/client/src/components/organisms/ourProduct/style.scss
@@ -56,7 +56,7 @@
 
       &:hover {
         button {
-          color: #dc5e00;
+          color: #00aae7;
         }
 
         img {
@@ -86,7 +86,7 @@
         }
 
         &:hover {
-          color: #dc5e00;
+          color: #00aae7;
         }
       }
 
@@ -97,7 +97,7 @@
 
     .activeItem {
       button {
-        color: #dc5e00;
+        color: #00aae7;
       }
     }
   }
@@ -193,7 +193,7 @@
 
         .img-div {
           border: 0.06vw solid #000;
-          background: #dc5e00;
+          background: #00aae7;
           box-shadow: inset 0 0 3px 3px #fff;
 
           @media (max-width: 768px) {
@@ -239,7 +239,7 @@
     width: 15.3vw;
     height: 15.3vw;
     border: 1px solid #000;
-    background: #dc5e00;
+    background: #00aae7;
     box-shadow: inset 0 0 0.2vw 0.2vw #fff;
 
     img {
@@ -292,7 +292,7 @@
 
       &:hover {
         button {
-          color: #dc5e00;
+          color: #00aae7;
         }
       }
 
@@ -314,7 +314,7 @@
         }
 
         &:hover {
-          color: #dc5e00;
+          color: #00aae7;
         }
       }
 
